[package]
name = "alpheidae"
version = "0.1.0"
authors = ["Suguru Kato <salmon.bioinformatics@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.0", features = ["openssl"] }
awc = "2.0"
base64 = "0.12"
chrono = "0.4"
hmac-sha1 = "0.1"
openssl = "0.10.30"
percent-encoding = "2.1"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_qs = "0.6"

[dev-dependencies]
actix-rt = "1.1"
envy = "0.4"
